--- a/redis/redis.yaml
+++ b/redis/redis.yaml
@@ -15,7 +15,11 @@ spec:
     ports:
     - containerPort: 6379
     resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
       limits:
+        memory: "128Mi"
         cpu: "0.1"
     volumeMounts:
     - mountPath: /redis-master-data
